# rocoma

./: .gitignore  CMakeLists.txt  LICENSE  README.md  Readme.md  nodelet_plugins.xml  package.xml
cmake/: locomotion_controllers.cmake
conf/: default_locomotion_controller.yaml
config/: anymal_nodelet_locomotion_controller.yaml  anymal_subscribers.yaml  default_locomotion_controller.yaml  default_publishers.yaml  default_servers.yaml  default_services.yaml  default_subscribers.yaml  logging.script  mule_parameters.yaml  nodelet.gdb  parameters.yaml  publishers.yaml  starleth_node_locomotion_controller.yaml  starleth_nodelet_locomotion_controller.yaml  subscribers.yaml
include/locomotion_controller/: ControllerManager.hpp  ControllerRos.hpp  ControllerRos.tpp  LocomotionController.hpp  Model.hpp  TimeRos.hpp  WorkerWrapper.hpp
include/rocoma/: ControllerManager.hpp  ControllerRos.hpp  EmergencyControllerInterface.hpp  RobotController.hpp  RobotController.tpp
include/rocoma/common/: EmergencyStopObserver.hpp
include/rocoma/controllers/: ControllerAdapter.hpp  ControllerAdapter.tpp  ControllerExtensionImplementation.hpp  ControllerExtensionImplementation.tpp  ControllerImplementation.hpp  EmergencyControllerAdapter.hpp  FailproofControllerAdapter.hpp
launch/: default_locomotion_controller.launch  locomotion_controller.launch  locomotion_controller_gdb.launch  locomotion_controller_screen.launch  mule_nodes.launch  nodelets.launch  nodelets_callback.launch  nodelets_wo_estimator.launch  nodes.launch  nodes_wo_estimator.launch  plot_sea.launch  starleth_locomotion_controller.launch  starleth_nodelet.launch  starleth_nodelet_gdb.launch  starleth_nodelet_screen.launch  starleth_nodelet_test.launch  starleth_nodes.launch  starleth_start.launch
launch/include/: locomotion_controller_node.launch  locomotion_controller_nodelet.launch
launch/unused/: nodes_wo_estimator.launch  plot_sea.launch
rocoma/: CMakeLists.txt  package.xml
rocoma/include/rocoma/: ControllerManager.hpp
rocoma/include/rocoma/common/: EmergencyStopObserver.hpp  TimeRos.hpp  WorkerWrapper.hpp
rocoma/include/rocoma/controllers/: ControllerAdapter.hpp  ControllerAdapter.tpp  ControllerExtensionImplementation.hpp  ControllerExtensionImplementation.tpp  ControllerImplementation.hpp  ControllerTuple.hpp  EmergencyControllerAdapter.hpp  FailproofControllerAdapter.hpp
rocoma/include/rocoma/plugin/: ControllerPluginInterface.hpp
rocoma/src/: ControllerManager.cpp
rocoma/test/: BasicTests.cpp  BehaviourTests.cpp
rocoma/test/include/: EmergencyController.hpp  FailProofController.hpp  PreStopCheckController.hpp  RocoCommand.hpp  RocoState.hpp  SimpleController.hpp  SleepyController.hpp  TestControllerManager.hpp
rocoma_doc/: CMakeLists.txt  doxygen.config.in  html_style_extras.html  mainpage.dox  package.xml  page_controller.dox  page_controller_manager.dox  page_controller_manager_ros.dox  page_controller_ros.dox  page_controller_tuple.dox  page_emergency_controller.dox  page_emergency_controller_ros.dox  page_export_plugin.dox  page_failproof_controller.dox  page_features.dox  page_shared_modules.dox  page_state_command.dox  page_swap_states.dox  page_tools.dox  page_use_managers.dox  page_write_controllers.dox
rocoma_doc/doxygen/: CMakeLists.txt  doxygen.config.in  mainpage.dox  page_controller.dox  page_controller_manager_ros.dox  page_controller_ros.dox  page_emergency_controller.dox  page_rocoma.dox
rocoma_example/: CMakeLists.txt  package.xml
rocoma_msgs/: CMakeLists.txt  package.xml
rocoma_msgs/msg/: ActiveControllerName.msg  ClearedEmergencyStopState.msg  ControllerManagerState.msg  EmergencyStop.msg
rocoma_msgs/srv/: EmergencyStop.srv  GetActiveController.srv  GetAvailableControllers.srv  SwitchController.srv
rocoma_plugin/: CMakeLists.txt  package.xml
rocoma_plugin/include/rocoma_plugin/: rocoma_plugin.hpp
rocoma_plugin/include/rocoma_plugin/interfaces/: ControllerPluginInterface.hpp  ControllerRosPluginInterface.hpp  EmergencyControllerPluginInterface.hpp  EmergencyControllerRosPluginInterface.hpp  FailProofControllerPluginInterface.hpp  FailproofControllerPluginInterface.hpp  SharedModulePluginInterface.hpp
rocoma_plugin/include/rocoma_plugin/plugins/: ControllerPlugin.hpp  ControllerRosPlugin.hpp  ControllerTuplePlugin.hpp  ControllerTupleRosPlugin.hpp  EmergencyControllerPlugin.hpp  EmergencyControllerRosPlugin.hpp  FailproofControllerPlugin.hpp  SharedModulePlugin.hpp  SharedModuleRosPlugin.hpp
rocoma_plugin/test/: TestRocomaPlugin.cpp  ros_interface.test
rocoma_ros/: CMakeLists.txt  package.xml
rocoma_ros/include/rocoma_ros/: ControllerManagerRos.hpp  ControllerManagerRos.tpp
rocoma_ros/src/: ControllerManagerRos.cpp
rocoma_ros/test/: TestRocomaRos.cpp  ros_interface.test
rocoma_test/: CMakeLists.txt  package.xml
rocoma_test/include/rocoma_test/: DangerouslyAllocatingController.hpp  EmergencyController.hpp  FailProofController.hpp  PreStopCheckController.hpp  RocoCommand.hpp  RocoState.hpp  SimpleController.hpp  SleepyController.hpp  TestControllerManager.hpp
rocoma_test/src/: BasicTests.cpp  BehaviourTests.cpp  test_main.cpp
src/: ControllerManager.cpp  LocomotionController.cpp  Model.cpp  add_locomotion_controllers.cpp  locomotion_controller_node.cpp  locomotion_controllers.cpp
srv/: SwitchController.srv
