<?xml version="1.0"?>
<package>
  <name>locomotion_controller</name>
  <version>0.0.0</version>
  <description>The locomotion_controller package</description>
  <maintainer email="gehrinch@ethz.ch">Christian Gehring</maintainer>
  <license>BSD</license>
  <!-- <url type="website">http://wiki.ros.org/locomotion_controller</url> -->
  <author email="gehrinch@ethz.ch">Christian Gehring</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>locomotion_controller_msgs</build_depend>
  <build_depend>starleth_description</build_depend>
  <build_depend>roscpp_nodewrap</build_depend>
  <build_depend>nodelet</build_depend>
  <build_depend>roco</build_depend>
  <build_depend>roco_assembly</build_depend>
  <build_depend>robot_utils</build_depend>
  
  <build_depend>signal_logger</build_depend>
  <build_depend>signal_logger_std</build_depend>
  <build_depend>signal_logger_ros</build_depend>
  
  <build_depend>robot_model</build_depend>
  <build_depend>roco_freeze</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>locomotion_controller_msgs</run_depend>
  <run_depend>starleth_description</run_depend>
  <run_depend>roscpp_nodewrap</run_depend>
  <run_depend>nodelet</run_depend>
  <run_depend>roco</run_depend>
  <run_depend>roco_assembly</run_depend>
  <run_depend>robot_utils</run_depend>
  
  <run_depend>signal_logger</run_depend>
  <run_depend>signal_logger_std</run_depend>
  <run_depend>signal_logger_ros</run_depend>

  <run_depend>robot_model</run_depend>
  <run_depend>roco_freeze</run_depend>
  <export>
 	<nodelet plugin="${prefix}/nodelet_plugins.xml"/>
  </export>
</package>
