<?xml version="1.0"?>
<package format="2">
  <name>locomotion_controller</name>
  <version>0.0.0</version>
  <description>The locomotion_controller package</description>
  <maintainer email="gehrinch@ethz.ch">Christian Gehring</maintainer>
  <license>BSD</license>
  <!-- <url type="website">http://wiki.ros.org/locomotion_controller</url> -->
  <author email="gehrinch@ethz.ch">Christian Gehring</author>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>locomotion_controller_msgs</depend>
  <depend>quadruped_msgs</depend>
  <depend>starleth_description</depend>
  <depend>roscpp_nodewrap</depend>
  <depend>nodelet</depend>
  <depend>roco</depend>
  <depend>roco_assembly</depend>
  <depend>robot_utils</depend>
  
  <depend>signal_logger</depend>
  <depend>signal_logger_std</depend>
  <depend>signal_logger_ros</depend>
  
  <depend>robot_model</depend>
  <depend>roco_freeze</depend>
  <depend>kindr</depend>
  <depend>series_elastic_actuator_ros</depend>
  <depend>any_msgs</depend>

  <export>
 	<nodelet plugin="${prefix}/nodelet_plugins.xml"/>
  </export>
</package>
