<?xml version="1.0"?>
<package format="2">

  <name>rocoma</name>
  <version>0.4.0</version>
  <description>The robot controller manager package</description>
  <url>https://github.com/anybotics/rocoma</url>

  <license>BSD</license>
  <maintainer email="avijayan@anybotics.com">Aravind Vijayan</maintainer>
  <maintainer email="fgiraldez@anybotics.com">Francisco Giráldez Gámez</maintainer>
  <author email="cgehring@anybotics.com">Christian Gehring</author>

  <buildtool_depend>catkin</buildtool_depend>

<!--   <build_depend>cmake_clang_tools</build_depend> -->

  <depend>roco</depend>
  <depend>any_worker</depend>
  <depend>message_logger</depend>
  <depend>signal_logger</depend>

<!--   <test_depend>cmake_code_coverage</test_depend> -->

</package>
