<?xml version="1.0"?>
<package format="2">
  <name>rocoma_doc</name>
  <version>0.4.0</version>
  <description>The robot controller manager documentation package</description>
  <maintainer email="avijayan@anybotics.com">Aravind Vijayan</maintainer>
  <maintainer email="fgiraldez@anybotics.com">Francisco Giráldez Gámez</maintainer>
  <license>BSD</license>
  <author email="ghottiger@anybotics.com">Gabriel Hottiger</author>
  <url>https://github.com/anybotics/rocoma</url>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>doxygen</depend>
  <depend>roco</depend>
  <depend>roco_ros</depend>
  <depend>rocoma</depend>
  <depend>rocoma_ros</depend>
  <depend>rocoma_msgs</depend>
  <depend>rocoma_plugin</depend>

</package>
