<?xml version="1.0"?>
<package format="2">

  <name>rocoma_msgs</name>
  <version>0.4.0</version>
  <description>The rocoma_msgs package</description>
  <url>https://github.com/anybotics/rocoma</url>

  <license>BSD</license>
  <author email="ghottiger@anybotics.com">Gabriel Hottiger</author>
  <maintainer email="avijayan@anybotics.com">Aravind Vijayan</maintainer>
  <maintainer email="fgiraldez@anybotics.com">Francisco Giráldez Gámez</maintainer>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>

  <depend>std_msgs</depend>

  <exec_depend>message_runtime</exec_depend>

</package>
