<?xml version="1.0"?>
<package format="2">

  <name>rocoma_ros</name>
  <version>0.4.0</version>
  <description>The rocoma_ros package</description>
  <url>https://github.com/anybotics/rocoma</url>

  <license>BSD</license>
  <author email="ghottiger@anybotics.com">Gabriel Hottiger</author>
  <maintainer email="avijayan@anybotics.com">Aravind Vijayan</maintainer>
  <maintainer email="fgiraldez@anybotics.com">Francisco Giráldez Gámez</maintainer>

  <buildtool_depend>catkin</buildtool_depend>

<!--   <build_depend>cmake_clang_tools</build_depend> -->

  <depend>roscpp</depend>
  <depend>roco</depend>
  <depend>rocoma</depend>
  <depend>rocoma_msgs</depend>
  <depend>rocoma_plugin</depend>
  <depend>pluginlib</depend>
  <depend>roslib</depend>
  <depend>std_srvs</depend>
  <depend>std_msgs</depend>

  <test_depend>rostest</test_depend>
<!--   <test_depend>cmake_code_coverage</test_depend> -->

</package>
