<?xml version="1.0"?>
<package format="2">
  <name>rocoma_test</name>
  <version>0.4.0</version>
  <description>The rocoma test package</description>

  <license>Proprietary</license>
  <maintainer email="avijayan@anybotics.com">Aravind Vijayan</maintainer>
  <maintainer email="fgiraldez@anybotics.com">Francisco Giráldez Gámez</maintainer>
  <author email="ghottiger@anybotics.com">Gabriel Hottiger</author>
  <url>https://github.com/anybotics/rocoma</url>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>rocoma</depend>
  <depend>rocoma_plugin</depend>
  <depend>message_logger</depend>

  <test_depend> cmake_code_coverage </test_depend>

</package>
